<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ibt_ros2_autodocking</name>
  <version>0.0.0</version>
  <description>ROS 2 package for automating robot docking and undocking procedures.
               It leverages Nav2 for high-level navigation and ArUco marker detection for precise alignment.</description>
  
  <maintainer email="hhakim815@gmail.com">hhakim</maintainer>
  
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>rclpy_action</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>cv_bridge</depend> 
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>ibt_ros2_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>